[NIAD-3144] Address PR comment https://github.com/NHSDigital/integration-adaptor-gp2gp/pull/828#discussion_r1723432600